✨ vector api examples