@@ -48,6 +48,7 @@
 					<compilerArgs>
 						<arg>--enable-preview</arg>
 						<arg>--add-modules=jdk.incubator.concurrent</arg>
+                  <arg>--add-modules=jdk.incubator.vector</arg>
 						<arg>--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED</arg>
 					</compilerArgs>
 					<source>${maven.compiler.source}</source>
@@ -63,6 +64,7 @@
 				<configuration>
 					<argLine>${argLine} --enable-preview
 						--add-modules=jdk.incubator.concurrent
+                  --add-modules=jdk.incubator.vector
 						--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED
 					</argLine>
 					<forkCount>1</forkCount>
